# scholar-ai

./: .gitignore  LICENSE  README.md
backend/: .env.example  pipeline.yaml  pyproject.toml
backend/app/: __init__.py  config.py  main.py  models.py  prompts.py  storage.py
backend/app/knowledge/: __init__.py  analysis.py  cache.py  chunkers.py  cleaning.py  pipeline.py  processors.py  stages.py  structure.py
backend/app/routers/: assessment.py  chat.py  concepts.py  documents.py  health.py  spaces.py
backend/app/services/: assessment.py  chat.py  chunking.py  concepts.py  documents.py  embeddings.py  events.py  extraction.py  mastery.py  ollama_client.py  progress.py  retrieval.py  spaces.py  vectorstore.py
backend/prompts/: chat_v1.md  concept_extraction_v1.md  grading_v1.md  multi_query_v1.md  ner_v1.md  prereq_v1.md  query_expansion_v1.md  question_gen_v1.md  summarization_v1.md
backend/tests/: test_assessment.py  test_chat.py  test_chunking.py  test_concepts.py  test_documents.py  test_health.py  test_knowledge.py  test_mastery.py  test_pipeline.py  test_prompts.py  test_retrieval.py  test_spaces.py  test_storage.py
docs/: PLAN.md  TICKETS.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ChatTab.tsx  DashboardTab.tsx  DocumentsTab.tsx  QuizTab.tsx  SetupBanner.tsx  SpaceDetail.tsx  SpaceFormDialog.tsx  SpacesList.tsx  Toaster.tsx
frontend/src/lib/: api.ts  toast.ts  utils.ts
scripts/: dev.sh  seed_demo.py  setup.sh
(+4 files in other folders)
