[project]
name = "scholarai-backend"
version = "0.1.0"
description = "ScholarAI backend — local-first, evidence-based learning platform"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "httpx>=0.27",
    "filelock>=3.13",
    "python-multipart>=0.0.9",
    "pypdf>=4.2",
    "python-docx>=1.1",
]

# Heavy / optional deps. Install with:  pip install -e ".[ml]"
# Kept optional so the app boots (and /health works) before any model download.
[project.optional-dependencies]
ml = [
    "sentence-transformers>=2.7",
    "numpy>=1.26",
    "faiss-cpu>=1.8",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
